--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,12 +1,24 @@
 apply plugin: 'java'
 apply from: rootProject.file('gradle/plugins/maven-simple.gradle')
 
+repositories {
+    jcenter()
+}
+
 compileJava {
     sourceCompatibility = 1.6
     targetCompatibility = 1.6
 }
 
+test {
+    include "**/*"
+}
+
 dependencies {
     compile 'com.github.techery:janet:1.0.4'
     compile 'com.github.techery.janet-converters:base-converter:1.0.1'
+    compile 'com.github.techery.janet-converters:gson:1.0.1'
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.mockito:mockito-core:1.+"
 }
