--- a/service/build.gradle
+++ b/service/build.gradle
@@ -5,8 +5,20 @@ compileJava {
     sourceCompatibility = 1.6
     targetCompatibility = 1.6
 }
+test {
+    include "**/*"
+}
 
+repositories {
+    jcenter()
+}
 dependencies {
     compile 'com.github.techery:janet:1.0.4'
     compile 'com.github.techery.janet-converters:base-converter:1.0.1'
+
+    testCompile project(':service-compiler')
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
+    testCompile 'org.assertj:assertj-core:3.4.1'
 }
